--- a/pages/index.html
+++ b/pages/index.html
@@ -21,11 +21,11 @@
         </a>
         <div class="contacts">
           <div class="contacts__item">
-            <img class="contacts__icon" src="../../src/icons/mail.png" alt="Mail icon">
+            <img class="contacts__icon" src="../src/icons/mail.png" alt="Mail icon">
             <a class="contacts__link" href="#">info@blabla.ru</a>
           </div>
           <div class="contacts__item">
-            <img class="contacts__icon" src="../../src/icons/phone.png" alt="Phone icon">
+            <img class="contacts__icon" src="../src/icons/phone.png" alt="Phone icon">
             <a class="contacts__link" href="#">+7999999999</a>
           </div>
         </div>
@@ -167,7 +167,7 @@
         </div>
         <div class="slogans">
           <div class="slogans__body">
-            <video src="../../src/background/slogans/video-bg.mp4" class="slogans__video" autoplay muted loop></video>
+            <video src="../src/background/slogans/video-bg.mp4" class="slogans__video" autoplay muted loop></video>
             <div class="slogans__list">
               <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
               <p class="slogans__text">Анализ качества продукции и выдача заключения специалиста и эксперта</p>
@@ -185,7 +185,7 @@
       </div>
       <div class="section-about__body">
         <div class="section-about__media ">
-          <img src="../../src/img/about/about-img.jpg" alt="Labotatory Image" class="section-about__img">
+          <img src="../src/img/about/about-img.jpg" alt="Labotatory Image" class="section-about__img">
         </div>
         <div class="section-about__info">
           <p class="section-about__info-text">Наша компания имеет отличную репутацию на рынке экспертиз, т.к. мы очень
@@ -211,7 +211,7 @@
       <div class="section-benefits__cards">
         <div class="card card_theme-red">
           <div class="card__icon">
-            <img src="../../src/icons/benefits/icon-cool.png" alt="Cool" class="card__icon-img">
+            <img src="../src/icons/benefits/icon-cool.png" alt="Cool" class="card__icon-img">
           </div>
           <h3 class="card__title">Преимущества</h3>
           <div class="card__info">
@@ -232,7 +232,7 @@
         <!--Преимущества-->
         <div class="card card_theme-bordo">
           <div class="card__icon">
-            <img src="../../src/icons/benefits/icon-house.png" alt="House" class="card__icon-img">
+            <img src="../src/icons/benefits/icon-house.png" alt="House" class="card__icon-img">
           </div>
           <h3 class="card__title">Принципы</h3>
           <div class="card__info">
@@ -251,7 +251,7 @@
         <!--Принципы-->
         <div class="card card_theme-dark">
           <div class="card__icon">
-            <img src="../../src/icons/benefits/icon-man.png" alt="Man" class="card__icon-img">
+            <img src="../src/icons/benefits/icon-man.png" alt="Man" class="card__icon-img">
           </div>
           <h3 class="card__title">Отличительная черта</h3>
           <div class="card__info">
@@ -295,7 +295,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -313,7 +313,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -332,7 +332,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -351,7 +351,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -370,7 +370,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -388,7 +388,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -408,7 +408,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -426,7 +426,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -444,7 +444,7 @@
               <div class="section-reviews__review-card">
                 <div class="section-reviews__user">
                   <div class="section-reviews__user-avatar">
-                    <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
+                    <img src="../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон"
                       class="section-reviews__avatar-img">
                   </div>
                   <div class="section-reviews__user-info">
@@ -534,7 +534,7 @@
 
     </div>
   </footer>
-  <script src="../../scripts/index.js" type="module"></script>
+  <script src="../scripts/index.js" type="module"></script>
 </body>
 
 </html>
