--- a/pages/page-2-6.html
+++ b/pages/page-2-6.html
@@ -16,16 +16,16 @@
   <div class="header">
     <div class="header__wrapper">
       <div class="header__top">
-        <a class="logo logo__link" href="#">
+        <a class="logo logo__link" href="index.html">
           <h1 class="logo__text">RED EXPERT</h1>
         </a>
         <div class="contacts">
           <div class="contacts__item">
-            <img class="contacts__icon" src="../../src/icons/mail.png" alt="Mail icon">
+            <img class="contacts__icon" src="../src/icons/mail.png" alt="Mail icon">
             <a class="contacts__link" href="#">info@blabla.ru</a>
           </div>
           <div class="contacts__item">
-            <img class="contacts__icon" src="../../src/icons/phone.png" alt="Phone icon">
+            <img class="contacts__icon" src="../src/icons/phone.png" alt="Phone icon">
             <a class="contacts__link" href="#">+7999999999</a>
           </div>
         </div>
