--- a/pages/page-2-3.html
+++ b/pages/page-2-3.html
@@ -46,7 +46,7 @@
                   <a href="page-2-2.html" class="service-menu__sublink">Товароведческая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="#" class="service-menu__sublink">Экологическая" экспертиза</a>
+                  <a href="#" class="service-menu__sublink">Экологическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-4.html" class="service-menu__sublink">Лингвистическая экспертиза</a>
@@ -235,7 +235,7 @@
               <a href="page-2-2.html" class="aside__list-link">Товароведческая экспертиза</a>
             </li>
             <li class="aside__list-item">
-              <a href="#" class="aside__list-link active">Экологическая" экспертиза</a>
+              <a href="#" class="aside__list-link active">Экологическая экспертиза</a>
             </li>
             <li class="aside__list-item">
               <a href="page-2-4.html" class="aside__list-link">Лингвистическая экспертиза</a>
