--- a/pages/index.html
+++ b/pages/index.html
@@ -146,6 +146,9 @@
                 <li class="service-menu__subitem">
                   <a href="page-2-35.html" class="service-menu__sublink">Экспертиза по 44 ФЗ</a>
                 </li>
+                <li class="service-menu__subitem">
+                  <a href="page-2-36.html" class="service-menu__sublink">Патентоведческая экспертиза</a>
+                </li>
               </ul>
             </li>
             <li class="service-menu__item service-menu__sublist">
