--- a/pages/page-2-12.html
+++ b/pages/page-2-12.html
@@ -73,7 +73,7 @@
                   <a href="page-2-11.html" class="service-menu__sublink">Фото-техническая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="page-2-12.html" class="service-menu__sublink">Экспертиза давности создания документа</a>
+                  <a href="#" class="service-menu__sublink">Экспертиза давности создания документа</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-13.html" class="service-menu__sublink">Проверка контрагентов по системе Дью
