--- a/pages/page-2-16.html
+++ b/pages/page-2-16.html
@@ -43,7 +43,7 @@
                   <a href="page-2-1.html" class="service-menu__sublink">Химическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="#" class="service-menu__sublink">Товароведческая экспертиза</a>
+                  <a href="page-2-2.html" class="service-menu__sublink">Товароведческая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-3.html" class="service-menu__sublink">Экологическая экспертиза</a>
@@ -86,7 +86,7 @@
                   <a href="page-2-15.html" class="service-menu__sublink">Сопровождение налоговых проверок</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="page-2-16.html" class="service-menu__sublink">Автотехническая проверка</a>
+                  <a href="#" class="service-menu__sublink">Автотехническая проверка</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-17.html" class="service-menu__sublink">Трасологическая экспертиза</a>
@@ -312,8 +312,8 @@
   </div>
   <section class="section-exptitle section">
     <div class="section__wrapper">
-      <div class="section-exptitle__title title-bg-tovar">
-        <h1 class="section-exptitle__title-text">Товароведческая экспертиза</h1>
+      <div class="section-exptitle__title title-bg-car">
+        <h1 class="section-exptitle__title-text">Автотехническая экспертиза</h1>
       </div>
     </div>
   </section>
@@ -322,36 +322,28 @@
       <main class="main">
         <div class="main__wrapper">
           <p class="main__text">
-            <span class="main__text_bold">Товароведческая экспертиза</span> – это оценка потребительских свойств товаров
-            по органолептическим, физико-химическим и микробиологическим показателям, а также показателей их
-            количественных характеристик, осуществляемая экспертами путем проведения испытаний (измерений) или опроса
-            и/или на основании информации на маркировке и/или в товарно-сопроводительных документах.
+            <span class="main__text_bold">Автотехническая экспертиза</span> – это специальное исследование
+            автотранспортных средств с целью оценки их текущего состояния и определения механизма произошедших с ними
+            изменений. Как правило, автотехническая экспертиза применяется в отношении автомобилей, побывавших в
+            дорожно-транспортных происшествиях. Данное исследование необходимо для установления актуальной стоимости
+            транспортного средства и определения нанесенного его владельцу материального ущерба. Кроме того, с помощью
+            этого вида экспертизы можно выяснить подробности происшествия, определить факторы, по которым суд
+            впоследствии сможет установить виновника аварии.
           </p>
           <p class="main__text">
-            <span class="main__text_bold">Необходимость</span> в проведении данной экспертизы состоит в том, что
-            зачастую потребитель не удовлетворен качеством приобретенного им товара. Недостатки и дефекты могут быть
-            обнаружены как сразу после покупки, так и с течением времени. Согласно Федеральному Закону «О защите прав
-            потребителей» товар может быть возвращен продавцу. В рамках товароведческой экспертизы определяются факторы,
-            которые позволяют выявить производственный брак, дефекты, образовавшиеся в результате доставки товара или в
-            результате эксплуатации изделия после покупки.
+            <span class="main__text_bold">Необходимость</span> данного исследования обусловлено тем, что зачастую в ДТП
+            попадает большое количество машин. В результате этого автомобиль может приобрести дефекты, которые требуется
+            устранить прибегая к помощи страховых компаний или самостоятельно. В результате автотехнической экспертизы
+            возможно произвести реальную оценку транспортного средства и выявить наличие или отсутствие различных
+            дефектов деталей и механизмов, оценка дорожных условий, оценку состояния транспортного средства, экспертиза
+            обстоятельств ДТП.
           </p>
-
           <p class="main__text">
-            <span class="main__text_bold">Объекты товароведческой экспертизы:</span>
+            <span class="main__text_bold">Объекты автотехнической экспертизы:</span>
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item"><span class="main__text_bold">Бытовая техника</span> (холодильники, мультиварки,
-              мясорубки, стиральные машины, пылесосы, кондиционеры)</li>
-            <li class="main__list-item"><span class="main__text_bold">Средства связи</span> (телефоны, смартфоны)</li>
-            <li class="main__list-item"><span class="main__text_bold">Посуда</span></li>
-            <li class="main__list-item"><span class="main__text_bold">Мебель</span> (мягкая мебель, диваны, стулья,
-              столы, кухонный гарнитур)</li>
-            <li class="main__list-item"><span class="main__text_bold">Одежда</span> (меховые, швейные и трикотажные
-              изделия, кожа и кожгалантерея)</li>
-            <li class="main__list-item"><span class="main__text_bold">Машины и аппараты</span> (станки, погрузчики и
-              пр.)</li>
-            <li class="main__list-item"><span class="main__text_bold">Оргтехника</span> (принтеры, факсы, сканеры)</li>
+            <li class="main__list-item"><span class="main__text_bold">Автомобиль</span></li>
           </ul>
           </p>
           <p class="main__text">
@@ -359,15 +351,13 @@
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item">Имеются ли недостатки и дефекты согласно ГОСТ … у исследуемого образца?</li>
-            <li class="main__list-item">К какому роду, виду и марке принадлежит товар?</li>
-            <li class="main__list-item">Каков размер материального ущерба, который был нанесен владельцу товара
-              (оборудования) в ходе возникновения непредвиденных обстоятельств (пожара, стихийного бедствия и т. д)?
-            </li>
-            <li class="main__list-item">Какая стоимость товара действовала на дату возникновения ущерба или проведения
-              исследования?</li>
-            <li class="main__list-item">Каким заявленным характеристикам соответствует или не соответствует товар?</li>
-            <li class="main__list-item">Возможна ли эксплуатация товара при наличии дефектов? </li>
+            <li class="main__list-item">Каковы причины произошедшего столкновения?</li>
+            <li class="main__list-item">Каково было состояние дорожного полотна в момент аварии?</li>
+            <li class="main__list-item">Соответствовало ли нанесение дорожной разметки требованиям нормативных
+              документов?</li>
+            <li class="main__list-item">Какова текущая стоимость исследуемого автомобиля?</li>
+            <li class="main__list-item">Каков объем материального ущерба, нанесенного владельцу автотранспортного
+              средства?</li>
           </ul>
           </p>
         </div>
@@ -379,7 +369,7 @@
               <a href="page-2-1.html" class="aside__list-link">Химическая экспертиза</a>
             </li>
             <li class="aside__list-item">
-              <a href="#" class="aside__list-link active">Товароведческая экспертиза</a>
+              <a href="page-2-2.html" class="aside__list-link">Товароведческая экспертиза</a>
             </li>
             <li class="aside__list-item">
               <a href="page-2-3.html" class="aside__list-link">Экологическая экспертиза</a>
@@ -422,7 +412,7 @@
               <a href="page-2-15.html" class="aside__list-link">Сопровождение налоговых проверок</a>
             </li>
             <li class="aside__list-item">
-              <a href="page-2-16.html" class="aside__list-link">Автотехническая проверка</a>
+              <a href="#" class="aside__list-link active">Автотехническая проверка</a>
             </li>
             <li class="aside__list-item">
               <a href="page-2-17.html" class="aside__list-link">Трасологическая экспертиза</a>
