--- a/pages/page-2-19.html
+++ b/pages/page-2-19.html
@@ -43,7 +43,7 @@
                   <a href="page-2-1.html" class="service-menu__sublink">Химическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="#" class="service-menu__sublink">Товароведческая экспертиза</a>
+                  <a href="page-2-2.html" class="service-menu__sublink">Товароведческая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-3.html" class="service-menu__sublink">Экологическая экспертиза</a>
@@ -95,7 +95,7 @@
                   <a href="page-2-18.html" class="service-menu__sublink">Фоноскопическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="page-2-19.html" class="service-menu__sublink">Землеустроительная экспертиза</a>
+                  <a href="#" class="service-menu__sublink">Землеустроительная экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-20.html" class="service-menu__sublink">Психо-физиологическое исследование на
@@ -312,8 +312,8 @@
   </div>
   <section class="section-exptitle section">
     <div class="section__wrapper">
-      <div class="section-exptitle__title title-bg-tovar">
-        <h1 class="section-exptitle__title-text">Товароведческая экспертиза</h1>
+      <div class="section-exptitle__title title-bg-land">
+        <h1 class="section-exptitle__title-text">Землеустроительная экспертиза</h1>
       </div>
     </div>
   </section>
@@ -322,36 +322,39 @@
       <main class="main">
         <div class="main__wrapper">
           <p class="main__text">
-            <span class="main__text_bold">Товароведческая экспертиза</span> – это оценка потребительских свойств товаров
-            по органолептическим, физико-химическим и микробиологическим показателям, а также показателей их
-            количественных характеристик, осуществляемая экспертами путем проведения испытаний (измерений) или опроса
-            и/или на основании информации на маркировке и/или в товарно-сопроводительных документах.
+            <span class="main__text_bold">Землеустроительная экспертиза</span> – это экспертиза, в рамках которой
+            определяются основные характеристики исследуемых земельных участков – фактическое расположение, точные
+            размеры (площади) и другие. Исследования, проводимые в ходе землеустроительной экспертизы, могут быть
+            связаны с определением границ земельных участков, вопросами совпадения фактических границ и границ,
+            закрепленных в документации, порядком использования землевладений, а также устанавливают возможность
+            разделения земель на более мелкие участки.
           </p>
           <p class="main__text">
-            <span class="main__text_bold">Необходимость</span> в проведении данной экспертизы состоит в том, что
-            зачастую потребитель не удовлетворен качеством приобретенного им товара. Недостатки и дефекты могут быть
-            обнаружены как сразу после покупки, так и с течением времени. Согласно Федеральному Закону «О защите прав
-            потребителей» товар может быть возвращен продавцу. В рамках товароведческой экспертизы определяются факторы,
-            которые позволяют выявить производственный брак, дефекты, образовавшиеся в результате доставки товара или в
-            результате эксплуатации изделия после покупки.
+            <span class="main__text_bold">Актуальность</span> данной экспертизы заключается в ее необходимости для
+            установления точного значения площади земельного участка, которая требуется для использования по назначению
+            недвижимого объекта, расположенного на исследуемом участке, для определения соответствия установленной
+            площади земельного участка и значения площади, указанного в правоустанавливающих документах, для
+            установления наличия на земельном участке объектов недвижимого имущества, для установления наличия на
+            земельном участке, находящемся во владении истца, имущества, принадлежащего ответчику, для определения
+            размещения границ между участками сторон судебного разбирательства, для определения координат, описывающих
+            месторасположение участка или объектов недвижимого имущества на нем, при межевании земель (определение,
+            восстановление, нанесение на местности границ земельных участков), при регистрации (перерегистрации)
+            землевладения.
           </p>
-
           <p class="main__text">
-            <span class="main__text_bold">Объекты товароведческой экспертизы:</span>
+            <span class="main__text_bold">Объекты землеустроительной экспертизы:</span>
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item"><span class="main__text_bold">Бытовая техника</span> (холодильники, мультиварки,
-              мясорубки, стиральные машины, пылесосы, кондиционеры)</li>
-            <li class="main__list-item"><span class="main__text_bold">Средства связи</span> (телефоны, смартфоны)</li>
-            <li class="main__list-item"><span class="main__text_bold">Посуда</span></li>
-            <li class="main__list-item"><span class="main__text_bold">Мебель</span> (мягкая мебель, диваны, стулья,
-              столы, кухонный гарнитур)</li>
-            <li class="main__list-item"><span class="main__text_bold">Одежда</span> (меховые, швейные и трикотажные
-              изделия, кожа и кожгалантерея)</li>
-            <li class="main__list-item"><span class="main__text_bold">Машины и аппараты</span> (станки, погрузчики и
-              пр.)</li>
-            <li class="main__list-item"><span class="main__text_bold">Оргтехника</span> (принтеры, факсы, сканеры)</li>
+            <li class="main__list-item"><span class="main__text_bold">Объекты землеустройства, которые согласно
+                действующей редакции Федерального закона от 18 июня 2001 г. № 78-ФЗ «О землеустройстве» представляют
+                территории субъектов Российской Федерации</span></li>
+            <li class="main__list-item"><span class="main__text_bold">Территории муниципальных образований</span></li>
+            <li class="main__list-item"><span class="main__text_bold">Территории населенных пунктов</span></li>
+            <li class="main__list-item"><span class="main__text_bold">Территориальные зоны</span></li>
+            <li class="main__list-item"><span class="main__text_bold">Зоны с особыми условиями использования
+                территорий</span></li>
+            <li class="main__list-item"><span class="main__text_bold">Части указанных территорий и зон</span></li>
           </ul>
           </p>
           <p class="main__text">
@@ -359,15 +362,30 @@
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item">Имеются ли недостатки и дефекты согласно ГОСТ … у исследуемого образца?</li>
-            <li class="main__list-item">К какому роду, виду и марке принадлежит товар?</li>
-            <li class="main__list-item">Каков размер материального ущерба, который был нанесен владельцу товара
-              (оборудования) в ходе возникновения непредвиденных обстоятельств (пожара, стихийного бедствия и т. д)?
-            </li>
-            <li class="main__list-item">Какая стоимость товара действовала на дату возникновения ущерба или проведения
-              исследования?</li>
-            <li class="main__list-item">Каким заявленным характеристикам соответствует или не соответствует товар?</li>
-            <li class="main__list-item">Возможна ли эксплуатация товара при наличии дефектов? </li>
+            <li class="main__list-item">Какова фактическая площадь исследуемого земельного участка?</li>
+            <li class="main__list-item">Соответствует ли установленная в процессе выполнения экспертизы фактическая
+              площадь участка, расположенного по указанному адресу, площади, заявленной в правоустанавливающих
+              документах?</li>
+            <li class="main__list-item">Имеется ли наложение границ данных земельных участков (имеющих соответствующие
+              кадастровые номера)?</li>
+            <li class="main__list-item">Находится ли на земельном участке истца (расположенном по указанному адресу,
+              имеющем указанную площадь и кадастровый номер) имущество ответчика?</li>
+            <li class="main__list-item">Соответствует ли фактическое расположение имущества ответчика на местности его
+              местонахождению, внесенному в документацию?</li>
+            <li class="main__list-item">Каковы географические координаты угловых (поворотных) точек исследуемого
+              земельного участка?</li>
+            <li class="main__list-item">Какова общая площадь пересеченных частей данных земельных участков?</li>
+            <li class="main__list-item">Какова площадь земельного участка, свободная от застройки?</li>
+            <li class="main__list-item">Какова площадь земельного участка, занятого постройками?</li>
+            <li class="main__list-item">Каковы координаты углов строения, расположенного на земельном участке?</li>
+            <li class="main__list-item">Возможно ли произвести строительство недвижимого объекта на исследуемом
+              земельном участке?</li>
+            <li class="main__list-item">Какова возможная площадь постройки, которую можно возвести на данном земельном
+              участке?</li>
+            <li class="main__list-item">Соответствуют ли действующему законодательству проведенные на исследуемом
+              участке землеустроительные работы?</li>
+            <li class="main__list-item">Соблюдены ли специальные правила застройки при проведении землеустроительных
+              работ на исследуемом земельном участке?</li>
           </ul>
           </p>
         </div>
@@ -379,7 +397,7 @@
               <a href="page-2-1.html" class="aside__list-link">Химическая экспертиза</a>
             </li>
             <li class="aside__list-item">
-              <a href="#" class="aside__list-link active">Товароведческая экспертиза</a>
+              <a href="page-2-2.html" class="aside__list-link">Товароведческая экспертиза</a>
             </li>
             <li class="aside__list-item">
               <a href="page-2-3.html" class="aside__list-link">Экологическая экспертиза</a>
@@ -431,7 +449,7 @@
               <a href="page-2-18.html" class="aside__list-link">Фоноскопическая экспертиза</a>
             </li>
             <li class="aside__list-item">
-              <a href="page-2-19.html" class="aside__list-link">Землеустроительная экспертиза</a>
+              <a href="#" class="aside__list-link active">Землеустроительная экспертиза</a>
             </li>
             <li class="aside__list-item">
               <a href="page-2-20.html" class="aside__list-link">Психо-физиологическое исследование на полиграфе</a>
