--- a/pages/page-2-36.html
+++ b/pages/page-2-36.html
@@ -43,7 +43,7 @@
                   <a href="page-2-1.html" class="service-menu__sublink">Химическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="#" class="service-menu__sublink">Товароведческая экспертиза</a>
+                  <a href="page-2-2.html" class="service-menu__sublink">Товароведческая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-3.html" class="service-menu__sublink">Экологическая экспертиза</a>
@@ -147,7 +147,7 @@
                   <a href="page-2-35.html" class="service-menu__sublink">Экспертиза по 44 ФЗ</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="page-2-36.html" class="service-menu__sublink">Патентоведческая экспертиза</a>
+                  <a href="#" class="service-menu__sublink">Патентоведческая экспертиза</a>
                 </li>
               </ul>
             </li>
@@ -312,8 +312,8 @@
   </div>
   <section class="section-exptitle section">
     <div class="section__wrapper">
-      <div class="section-exptitle__title title-bg-tovar">
-        <h1 class="section-exptitle__title-text">Товароведческая экспертиза</h1>
+      <div class="section-exptitle__title title-bg-patent">
+        <h1 class="section-exptitle__title-text">Патентоведческая экспертиза</h1>
       </div>
     </div>
   </section>
@@ -322,36 +322,29 @@
       <main class="main">
         <div class="main__wrapper">
           <p class="main__text">
-            <span class="main__text_bold">Товароведческая экспертиза</span> – это оценка потребительских свойств товаров
-            по органолептическим, физико-химическим и микробиологическим показателям, а также показателей их
-            количественных характеристик, осуществляемая экспертами путем проведения испытаний (измерений) или опроса
-            и/или на основании информации на маркировке и/или в товарно-сопроводительных документах.
+            <span class="main__text_bold">Патентоведческая экспертиза</span> – это экспертиза, целью которой является
+            решение вопросов, связанных с объектами интеллектуальной собственности.
           </p>
           <p class="main__text">
-            <span class="main__text_bold">Необходимость</span> в проведении данной экспертизы состоит в том, что
-            зачастую потребитель не удовлетворен качеством приобретенного им товара. Недостатки и дефекты могут быть
-            обнаружены как сразу после покупки, так и с течением времени. Согласно Федеральному Закону «О защите прав
-            потребителей» товар может быть возвращен продавцу. В рамках товароведческой экспертизы определяются факторы,
-            которые позволяют выявить производственный брак, дефекты, образовавшиеся в результате доставки товара или в
-            результате эксплуатации изделия после покупки.
+            <span class="main__text_bold">Актуальность</span> данной экспертизы заключается в ее необходимости при
+            разрешении споров о защите прав на интеллектуальную собственность; при решении вопроса о возбуждении
+            уголовного дела по ст. 146 УК РФ «Нарушение авторских и смежных прав», ст. 147 УК РФ «Нарушение
+            изобретательских и патентных прав»; в других спорных случаях, связанных с нарушением прав на
+            интеллектуальную собственность.
           </p>
-
           <p class="main__text">
-            <span class="main__text_bold">Объекты товароведческой экспертизы:</span>
+            <span class="main__text_bold">Объекты патентоведческой экспертизы:</span>
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item"><span class="main__text_bold">Бытовая техника</span> (холодильники, мультиварки,
-              мясорубки, стиральные машины, пылесосы, кондиционеры)</li>
-            <li class="main__list-item"><span class="main__text_bold">Средства связи</span> (телефоны, смартфоны)</li>
-            <li class="main__list-item"><span class="main__text_bold">Посуда</span></li>
-            <li class="main__list-item"><span class="main__text_bold">Мебель</span> (мягкая мебель, диваны, стулья,
-              столы, кухонный гарнитур)</li>
-            <li class="main__list-item"><span class="main__text_bold">Одежда</span> (меховые, швейные и трикотажные
-              изделия, кожа и кожгалантерея)</li>
-            <li class="main__list-item"><span class="main__text_bold">Машины и аппараты</span> (станки, погрузчики и
-              пр.)</li>
-            <li class="main__list-item"><span class="main__text_bold">Оргтехника</span> (принтеры, факсы, сканеры)</li>
+            <li class="main__list-item"><span class="main__text_bold">Товарные знаки</span> (графические, смешанные)
+            </li>
+            <li class="main__list-item"><span class="main__text_bold">Фирменные наименования</span></li>
+            <li class="main__list-item"><span class="main__text_bold">Торговые марки, бренды; логотипы</span></li>
+            <li class="main__list-item"><span class="main__text_bold">Научные разработки и промышленные образцы</span>
+            </li>
+            <li class="main__list-item"><span class="main__text_bold">Полезные модели и изобретения</span></li>
+
           </ul>
           </p>
           <p class="main__text">
@@ -359,15 +352,19 @@
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item">Имеются ли недостатки и дефекты согласно ГОСТ … у исследуемого образца?</li>
-            <li class="main__list-item">К какому роду, виду и марке принадлежит товар?</li>
-            <li class="main__list-item">Каков размер материального ущерба, который был нанесен владельцу товара
-              (оборудования) в ходе возникновения непредвиденных обстоятельств (пожара, стихийного бедствия и т. д)?
-            </li>
-            <li class="main__list-item">Какая стоимость товара действовала на дату возникновения ущерба или проведения
-              исследования?</li>
-            <li class="main__list-item">Каким заявленным характеристикам соответствует или не соответствует товар?</li>
-            <li class="main__list-item">Возможна ли эксплуатация товара при наличии дефектов? </li>
+            <li class="main__list-item">Имеются ли в исследуемых образцах признаки изобретения или полезной модели,
+              которые указаны в патенте?</li>
+            <li class="main__list-item">Используются ли в продуктах или способах каждый из признаков изобретения или
+              полезной модели, обозначенный в независимом пункте содержащейся в патенте формулы изобретения или полезной
+              модели, или признак, идентичный ему и имеющий известность в качестве такового в конкретной области техники
+              до применения продукта или способа?</li>
+            <li class="main__list-item">Имеются ли в объекте исследования признаки промышленного образца, обозначенные в
+              свидетельстве на промышленный образец?</li>
+            <li class="main__list-item">Имеет ли изделие все основные признаки промышленного образца, которые отражаются
+              в изображении изделия и приведены в списке существенных признаков промышленного образца?</li>
+            <li class="main__list-item">Имеется ли различие или сходство до степени смешения между товарными знаками
+              (фирменными наименованиями, логотипами), представленными на исследование?</li>
+            <li class="main__list-item">Какой элемент является доминирующим в товарных знаках?</li>
           </ul>
           </p>
         </div>
@@ -379,7 +376,7 @@
               <a href="page-2-1.html" class="aside__list-link">Химическая экспертиза</a>
             </li>
             <li class="aside__list-item">
-              <a href="#" class="aside__list-link active">Товароведческая экспертиза</a>
+              <a href="page-2-2.html" class="aside__list-link">Товароведческая экспертиза</a>
             </li>
             <li class="aside__list-item">
               <a href="page-2-3.html" class="aside__list-link">Экологическая экспертиза</a>
@@ -482,7 +479,7 @@
               <a href="page-2-35.html" class="aside__list-link">Экспертиза по 44 ФЗ</a>
             </li>
             <li class="aside__list-item">
-              <a href="page-2-36.html" class="aside__list-link">Патентоведческая экспертиза</a>
+              <a href="#" class="aside__list-link  active">Патентоведческая экспертиза</a>
             </li>
           </ul>
         </div>
