--- a/pages/page-2-18.html
+++ b/pages/page-2-18.html
@@ -43,7 +43,7 @@
                   <a href="page-2-1.html" class="service-menu__sublink">Химическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="#" class="service-menu__sublink">Товароведческая экспертиза</a>
+                  <a href="page-2-2.html" class="service-menu__sublink">Товароведческая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-3.html" class="service-menu__sublink">Экологическая экспертиза</a>
@@ -92,7 +92,7 @@
                   <a href="page-2-17.html" class="service-menu__sublink">Трасологическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="page-2-18.html" class="service-menu__sublink">Фоноскопическая экспертиза</a>
+                  <a href="#" class="service-menu__sublink">Фоноскопическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-19.html" class="service-menu__sublink">Землеустроительная экспертиза</a>
@@ -312,8 +312,8 @@
   </div>
   <section class="section-exptitle section">
     <div class="section__wrapper">
-      <div class="section-exptitle__title title-bg-tovar">
-        <h1 class="section-exptitle__title-text">Товароведческая экспертиза</h1>
+      <div class="section-exptitle__title title-bg-phone">
+        <h1 class="section-exptitle__title-text">Фоноскопическая экспертиза</h1>
       </div>
     </div>
   </section>
@@ -322,36 +322,26 @@
       <main class="main">
         <div class="main__wrapper">
           <p class="main__text">
-            <span class="main__text_bold">Товароведческая экспертиза</span> – это оценка потребительских свойств товаров
-            по органолептическим, физико-химическим и микробиологическим показателям, а также показателей их
-            количественных характеристик, осуществляемая экспертами путем проведения испытаний (измерений) или опроса
-            и/или на основании информации на маркировке и/или в товарно-сопроводительных документах.
+            <span class="main__text_bold">Фоноскопическая экспертиза</span> – это экспертиза, направленная на
+            установление обстоятельств (фактов) путем исследования голоса и звучащей речи, звуковой среды, условий,
+            средств, материалов и следов звукозаписей. Голос человека индивидуален, характеристики голоса устойчивы и
+            всегда остаются индивидуальными при различных изменениях органов речи. Сформированная речь человека
+            практически не меняется в течение всей жизни. В последнее время роль звуковых следов человека существенно
+            возросла: записать разговор на диктофон или телефон может практически любой человек, аудиозапись судебного
+            заседания могут вести стороны и все лица, присутствующие на заседании, аудиозапись заседания из арбитражного
+            суда ведется в суде автоматически и ее можно получить по запросу в электронном виде.
           </p>
           <p class="main__text">
-            <span class="main__text_bold">Необходимость</span> в проведении данной экспертизы состоит в том, что
-            зачастую потребитель не удовлетворен качеством приобретенного им товара. Недостатки и дефекты могут быть
-            обнаружены как сразу после покупки, так и с течением времени. Согласно Федеральному Закону «О защите прав
-            потребителей» товар может быть возвращен продавцу. В рамках товароведческой экспертизы определяются факторы,
-            которые позволяют выявить производственный брак, дефекты, образовавшиеся в результате доставки товара или в
-            результате эксплуатации изделия после покупки.
+            <span class="main__text_bold">Актуальность</span> данного исследования заключается в необходимости
+            идентификации человека по голосу и речи, выявления целостности фонограмм, а также установления иных фактов,
+            имеющих значение при доказывании преступлений.
           </p>
-
           <p class="main__text">
-            <span class="main__text_bold">Объекты товароведческой экспертизы:</span>
+            <span class="main__text_bold">Объекты фоноскопической экспертизы:</span>
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item"><span class="main__text_bold">Бытовая техника</span> (холодильники, мультиварки,
-              мясорубки, стиральные машины, пылесосы, кондиционеры)</li>
-            <li class="main__list-item"><span class="main__text_bold">Средства связи</span> (телефоны, смартфоны)</li>
-            <li class="main__list-item"><span class="main__text_bold">Посуда</span></li>
-            <li class="main__list-item"><span class="main__text_bold">Мебель</span> (мягкая мебель, диваны, стулья,
-              столы, кухонный гарнитур)</li>
-            <li class="main__list-item"><span class="main__text_bold">Одежда</span> (меховые, швейные и трикотажные
-              изделия, кожа и кожгалантерея)</li>
-            <li class="main__list-item"><span class="main__text_bold">Машины и аппараты</span> (станки, погрузчики и
-              пр.)</li>
-            <li class="main__list-item"><span class="main__text_bold">Оргтехника</span> (принтеры, факсы, сканеры)</li>
+            <li class="main__list-item"><span class="main__text_bold">Звуковая и речевая информация</span></li>
           </ul>
           </p>
           <p class="main__text">
@@ -359,15 +349,19 @@
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item">Имеются ли недостатки и дефекты согласно ГОСТ … у исследуемого образца?</li>
-            <li class="main__list-item">К какому роду, виду и марке принадлежит товар?</li>
-            <li class="main__list-item">Каков размер материального ущерба, который был нанесен владельцу товара
-              (оборудования) в ходе возникновения непредвиденных обстоятельств (пожара, стихийного бедствия и т. д)?
+            <li class="main__list-item">Каково дословное содержание разговора, записанного на представленной фонограмме?
             </li>
-            <li class="main__list-item">Какая стоимость товара действовала на дату возникновения ущерба или проведения
-              исследования?</li>
-            <li class="main__list-item">Каким заявленным характеристикам соответствует или не соответствует товар?</li>
-            <li class="main__list-item">Возможна ли эксплуатация товара при наличии дефектов? </li>
+            <li class="main__list-item">Имеется ли на представленной фонограмме голос и речь гражданина … (ФИО),
+              сравнительные образцы устной речи которого представлены на исследование? Если да, то какие реплики ему
+              принадлежат?</li>
+            <li class="main__list-item">Является ли речь, записанная на фонограмме, спонтанной или подготовленной
+              (выученной наизусть)?</li>
+            <li class="main__list-item">Имеются ли на фонограмме признаки монтажа и нарушения непрерывности записи или
+              иные изменения, привнесенные в процессе записи или после ее окончания?</li>
+            <li class="main__list-item">В какой акустической обстановке производилась запись фонограммы, записанной на
+              представленном носителе?</li>
+            <li class="main__list-item">В каком эмоционально-психологическом состоянии находился говорящий в момент
+              осуществления записи?</li>
           </ul>
           </p>
         </div>
@@ -379,7 +373,7 @@
               <a href="page-2-1.html" class="aside__list-link">Химическая экспертиза</a>
             </li>
             <li class="aside__list-item">
-              <a href="#" class="aside__list-link active">Товароведческая экспертиза</a>
+              <a href="page-2-2.html" class="aside__list-link">Товароведческая экспертиза</a>
             </li>
             <li class="aside__list-item">
               <a href="page-2-3.html" class="aside__list-link">Экологическая экспертиза</a>
@@ -428,7 +422,7 @@
               <a href="page-2-17.html" class="aside__list-link">Трасологическая экспертиза</a>
             </li>
             <li class="aside__list-item">
-              <a href="page-2-18.html" class="aside__list-link">Фоноскопическая экспертиза</a>
+              <a href="#" class="aside__list-link active">Фоноскопическая экспертиза</a>
             </li>
             <li class="aside__list-item">
               <a href="page-2-19.html" class="aside__list-link">Землеустроительная экспертиза</a>
