--- a/pages/page-2-5.html
+++ b/pages/page-2-5.html
@@ -146,6 +146,9 @@
                 <li class="service-menu__subitem">
                   <a href="page-2-35.html" class="service-menu__sublink">Экспертиза по 44 ФЗ</a>
                 </li>
+                <li class="service-menu__subitem">
+                  <a href="page-2-36.html" class="service-menu__sublink">Патентоведческая экспертиза</a>
+                </li>
               </ul>
             </li>
             <li class="service-menu__item service-menu__sublist">
@@ -492,6 +495,9 @@
             </li>
             <li class="aside__list-item">
               <a href="page-2-35.html" class="aside__list-link">Экспертиза по 44 ФЗ</a>
+            </li>
+            <li class="aside__list-item">
+              <a href="page-2-36.html" class="aside__list-link">Патентоведческая экспертиза</a>
             </li>
           </ul>
         </div>
