--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
   <div class="header">
     <div class="header__wrapper">
       <div class="header__top">
-        <a class="logo logo__link" href="#">
+        <a class="logo logo__link header__logo" href="#">
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
           </div>
@@ -35,12 +35,25 @@
       </div>
       <div class="header__bottom">
         <div class="service-menu">
-          <ul class="service-menu__list">
+          <div class="burger-menu inactive">
+            <div class="burger-menu__line"></div>
+            <div class="burger-menu__line"></div>
+            <div class="burger-menu__line"></div>
+          </div>
+          <div class="cross inactive">
+            x
+          </div>
+          <ul class="service-menu__list" id="serviceMenuList">
             <li class="service-menu__item">
               <a href="index.html" class="service-menu__link">Главная</a>
             </li>
             <li class="service-menu__item service-menu__sublist">
-              <a href="#" class="service-menu__link">Экспертиза</a>
+              <div class="service-menu__wrapper">
+                <a href="#" class="service-menu__link">Экспертиза</a>
+                <div class="arrow inactive">
+                  <img src="../src/icons/arrow.svg" alt="Arrow" class="arrow__img">
+                </div>
+              </div>
               <ul class="service-menu__submenu scroll-body">
                 <li class="service-menu__subitem">
                   <a href="page-2-1.html" class="service-menu__sublink">Химическая экспертиза</a>
@@ -172,7 +185,12 @@
               </ul>
             </li>
             <li class="service-menu__item service-menu__sublist">
-              <a href="#" class="service-menu__link">Оценка</a>
+              <div class="service-menu__wrapper">
+                <a href="#" class="service-menu__link">Оценка</a>
+                <div class="arrow inactive">
+                  <img src="../src/icons/arrow.svg" alt="Arrow" class="arrow__img">
+                </div>
+              </div>
               <ul class="service-menu__submenu scroll-body">
                 <li class="service-menu__subitem disabled disabled">
                   <a href="page-3-1.html" class="service-menu__sublink service-menu__sublink_disabled">Оценка объектов
@@ -214,7 +232,12 @@
               </ul>
             </li>
             <li class="service-menu__item service-menu__sublist">
-              <a href="#" class="service-menu__link">Рецензирование</a>
+              <div class="service-menu__wrapper">
+                <a href="#" class="service-menu__link">Рецензирование</a>
+                <div class="arrow inactive">
+                  <img src="../src/icons/arrow.svg" alt="Arrow" class="arrow__img">
+                </div>
+              </div>
               <ul class="service-menu__submenu scroll-body">
                 <li class="service-menu__subitem disabled">
                   <a href="page-4-1.html" class="service-menu__sublink service-menu__sublink_disabled">Рецензия на
