--- a/pages/page-2-2.html
+++ b/pages/page-2-2.html
@@ -16,17 +16,20 @@
   <div class="header">
     <div class="header__wrapper">
       <div class="header__top">
-        <a class="logo logo__link" href="index.html">
-          <h1 class="logo__text">RED EXPERT</h1>
+        <a class="logo logo__link" href="#">
+          <div class="logo__square">
+            <div class="logo__square-text">RE</div>
+          </div>
+          <div class="logo__text">RED EXPERT</div>
         </a>
         <div class="contacts">
           <div class="contacts__item">
             <img class="contacts__icon" src="../src/icons/mail.png" alt="Mail icon">
-            <a class="contacts__link" href="#">info@blabla.ru</a>
+            <a class="contacts__link" href="mailto:red.exp@yandex.ru">red.exp@yandex.ru</a>
           </div>
           <div class="contacts__item">
             <img class="contacts__icon" src="../src/icons/phone.png" alt="Phone icon">
-            <a class="contacts__link" href="#">+7999999999</a>
+            <a class="contacts__link" href="tel:+79257359797">+7 (925) 735-97-97</a>
           </div>
         </div>
       </div>
@@ -564,7 +567,10 @@
     <div class="footer__top">
       <div class="footer__wrapper footer__top-content">
         <a class="footer__logo footer__logo-link" href="#">
-          <p class="footer__logo-text">RED EXPERT</p>
+          <div class="logo__square">
+            <div class="logo__square-text">RE</div>
+          </div>
+          <div class="logo__text">RED EXPERT</div>
         </a>
         <div class="footer__info">
           <ul class="footer__info-list">
@@ -572,15 +578,14 @@
               <a href="tel:+79257539797" class="footer__info-link">+7 (925) 753-97-97</a>
             </li>
             <li class="footer__info-item">
-              <a href="mailto:himteh.exp@yandex.ru" class="footer__info-link">himteh.exp@yandex.ru</a>
+              <a href="mailto:red.exp@yandex.ru" class="footer__info-link">red.exp@yandex.ru</a>
             </li>
-            <li class="footer__info-item">Одинцово, ул. Белорусская, д. 4</li>
           </ul>
         </div>
         <div class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-item">
-              <a href="index.html" class="footer__menu-link">Главная</a>
+              <a href="#" class="footer__menu-link">Главная</a>
             </li>
             <li class="footer__menu-item">
               <a href="#" class="footer__menu-link">Экспертизы</a>
@@ -612,7 +617,7 @@
     <div class="footer__bottom">
       <div class="footer__wrapper footer__bottom-content">
         <div class="footer__copyright">
-          <p class="footer__copyright-text">&#169; 2023 CHEMTECHEXP.RU</p>
+          <p class="footer__copyright-text">&#169; 2023 REDEXPERT.RU</p>
         </div>
         <div class="social-media">
           <div class="social-media__body">
